@@ -9,6 +9,7 @@ Change Log:
 - Added: Template system, now M2 pages (Membership List, Payment Form, Registration Page, Account Page) can be overwritten from theme
 - Added: Option to show BP XProfile fields in M2 account page
 - Added: ms_get_blog_list_args filter added to show non-public blogs in protectin rules page in network admin
+- Added: Define 'MS_CPT_ENABLE_ACCESS_BOX' to enable protection meta box in custom post type
 - Fixed: Test Memberships was not working (simulation mode)
 - Fixed: Protected posts appears in archive page
 - Fixed: Conflict with WPEngine Deployment
